sys/prebuilt-bindings/geos_3.11.rs

extern "C" {
    #[doc = " \\see GEOSCoordSeq_copyFromBuffer"]
    pub fn GEOSCoordSeq_copyFromBuffer_r(
        handle: GEOSContextHandle_t,
        buf: *const f64,
        size: libc::c_uint,
        hasZ: libc::c_int,
        hasM: libc::c_int,
    ) -> *mut GEOSCoordSequence;
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_copyFromArrays"]
    pub fn GEOSCoordSeq_copyFromArrays_r(
        handle: GEOSContextHandle_t,
        x: *const f64,
        y: *const f64,
        z: *const f64,
        m: *const f64,
        size: libc::c_uint,
    ) -> *mut GEOSCoordSequence;
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_copyToBuffer"]
    pub fn GEOSCoordSeq_copyToBuffer_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        buf: *mut f64,
        hasZ: libc::c_int,
        hasM: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_copyToArrays"]
    pub fn GEOSCoordSeq_copyToArrays_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        x: *mut f64,
        y: *mut f64,
        z: *mut f64,
        m: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_clone"]
    pub fn GEOSCoordSeq_clone_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
    ) -> *mut GEOSCoordSequence;
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_destroy"]
    pub fn GEOSCoordSeq_destroy_r(handle: GEOSContextHandle_t, s: *mut GEOSCoordSequence);
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_setX"]
    pub fn GEOSCoordSeq_setX_r(
        handle: GEOSContextHandle_t,
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        val: f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_setY"]
    pub fn GEOSCoordSeq_setY_r(
        handle: GEOSContextHandle_t,
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        val: f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_setZ"]
    pub fn GEOSCoordSeq_setZ_r(
        handle: GEOSContextHandle_t,
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        val: f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_setXY"]
    pub fn GEOSCoordSeq_setXY_r(
        handle: GEOSContextHandle_t,
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        x: f64,
        y: f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_setXYZ"]
    pub fn GEOSCoordSeq_setXYZ_r(
        handle: GEOSContextHandle_t,
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        x: f64,
        y: f64,
        z: f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_setOrdinate"]
    pub fn GEOSCoordSeq_setOrdinate_r(
        handle: GEOSContextHandle_t,
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        dim: libc::c_uint,
        val: f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_getX"]
    pub fn GEOSCoordSeq_getX_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        val: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_getY"]
    pub fn GEOSCoordSeq_getY_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        val: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_getZ"]
    pub fn GEOSCoordSeq_getZ_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        val: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_getXY"]
    pub fn GEOSCoordSeq_getXY_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        x: *mut f64,
        y: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_getXYZ"]
    pub fn GEOSCoordSeq_getXYZ_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        x: *mut f64,
        y: *mut f64,
        z: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_getOrdinate"]
    pub fn GEOSCoordSeq_getOrdinate_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        dim: libc::c_uint,
        val: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_getSize"]
    pub fn GEOSCoordSeq_getSize_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        size: *mut libc::c_uint,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_getDimensions"]
    pub fn GEOSCoordSeq_getDimensions_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        dims: *mut libc::c_uint,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSCoordSeq_isCCW"]
    pub fn GEOSCoordSeq_isCCW_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        is_ccw: *mut libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSProject"]
    pub fn GEOSProject_r(
        handle: GEOSContextHandle_t,
        line: *const GEOSGeometry,
        point: *const GEOSGeometry,
    ) -> f64;
}
extern "C" {
    #[doc = " \\see GEOSInterpolate"]
    pub fn GEOSInterpolate_r(
        handle: GEOSContextHandle_t,
        line: *const GEOSGeometry,
        d: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSProjectNormalized"]
    pub fn GEOSProjectNormalized_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        p: *const GEOSGeometry,
    ) -> f64;
}
extern "C" {
    #[doc = " \\see GEOSInterpolateNormalized"]
    pub fn GEOSInterpolateNormalized_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        d: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSBuffer"]
    pub fn GEOSBuffer_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        width: f64,
        quadsegs: libc::c_int,
    ) -> *mut GEOSGeometry;
}
#[doc = " End is rounded, with end point of original line in the centre of the round cap."]
pub const GEOSBufCapStyles_GEOSBUF_CAP_ROUND: GEOSBufCapStyles = 1;
#[doc = " End is flat, with end point of original line at the end of the buffer"]
pub const GEOSBufCapStyles_GEOSBUF_CAP_FLAT: GEOSBufCapStyles = 2;
#[doc = " End is flat, with end point of original line in the middle of a square enclosing that point"]
pub const GEOSBufCapStyles_GEOSBUF_CAP_SQUARE: GEOSBufCapStyles = 3;
#[doc = " Cap styles control the ends of buffered lines."]
#[doc = " \\see GEOSBuffer"]
pub type GEOSBufCapStyles = libc::c_uint;
#[doc = " Join is rounded, essentially each line is terminated"]
#[doc = " in a round cap. Form round corner."]
pub const GEOSBufJoinStyles_GEOSBUF_JOIN_ROUND: GEOSBufJoinStyles = 1;
#[doc = " Join is flat, with line between buffer edges,"]
#[doc = " through the join point. Forms flat corner."]
pub const GEOSBufJoinStyles_GEOSBUF_JOIN_MITRE: GEOSBufJoinStyles = 2;
#[doc = " Join is the point at which the two buffer edges intersect."]
#[doc = " Forms sharp corner."]
pub const GEOSBufJoinStyles_GEOSBUF_JOIN_BEVEL: GEOSBufJoinStyles = 3;
#[doc = " Join styles control the buffer shape at bends in a line."]
#[doc = " \\see GEOSBuffer"]
pub type GEOSBufJoinStyles = libc::c_uint;
extern "C" {
    #[doc = " \\see GEOSBufferParams_create"]
    pub fn GEOSBufferParams_create_r(handle: GEOSContextHandle_t) -> *mut GEOSBufferParams;
}
extern "C" {
    #[doc = " \\see GEOSBufferParams_destroy"]
    pub fn GEOSBufferParams_destroy_r(handle: GEOSContextHandle_t, parms: *mut GEOSBufferParams);
}
extern "C" {
    #[doc = " \\see GEOSBufferParams_setEndCapStyle"]
    pub fn GEOSBufferParams_setEndCapStyle_r(
        handle: GEOSContextHandle_t,
        p: *mut GEOSBufferParams,
        style: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSBufferParams_setJoinStyle"]
    pub fn GEOSBufferParams_setJoinStyle_r(
        handle: GEOSContextHandle_t,
        p: *mut GEOSBufferParams,
        joinStyle: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSBufferParams_setMitreLimit"]
    pub fn GEOSBufferParams_setMitreLimit_r(
        handle: GEOSContextHandle_t,
        p: *mut GEOSBufferParams,
        mitreLimit: f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSBufferParams_setQuadrantSegments"]
    pub fn GEOSBufferParams_setQuadrantSegments_r(
        handle: GEOSContextHandle_t,
        p: *mut GEOSBufferParams,
        quadSegs: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSBufferParams_setSingleSided"]
    pub fn GEOSBufferParams_setSingleSided_r(
        handle: GEOSContextHandle_t,
        p: *mut GEOSBufferParams,
        singleSided: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSBufferWithParams"]
    pub fn GEOSBufferWithParams_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        p: *const GEOSBufferParams,
        width: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSBufferWithStyle"]
    pub fn GEOSBufferWithStyle_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        width: f64,
        quadsegs: libc::c_int,
        endCapStyle: libc::c_int,
        joinStyle: libc::c_int,
        mitreLimit: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSDensify"]
    pub fn GEOSDensify_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        tolerance: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSOffsetCurve"]
    pub fn GEOSOffsetCurve_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        width: f64,
        quadsegs: libc::c_int,
        joinStyle: libc::c_int,
        mitreLimit: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGeom_createPoint"]
    pub fn GEOSGeom_createPoint_r(
        handle: GEOSContextHandle_t,
        s: *mut GEOSCoordSequence,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGeom_createPointFromXY"]
    pub fn GEOSGeom_createPointFromXY_r(
        handle: GEOSContextHandle_t,
        x: f64,
        y: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGeom_createEmptyPoint"]
    pub fn GEOSGeom_createEmptyPoint_r(handle: GEOSContextHandle_t) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGeom_createLinearRing"]
    pub fn GEOSGeom_createLinearRing_r(
        handle: GEOSContextHandle_t,
        s: *mut GEOSCoordSequence,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGeom_createLineString"]
    pub fn GEOSGeom_createLineString_r(
        handle: GEOSContextHandle_t,
        s: *mut GEOSCoordSequence,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGeom_createEmptyLineString"]
    pub fn GEOSGeom_createEmptyLineString_r(handle: GEOSContextHandle_t) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGeom_createEmptyPolygon"]
    pub fn GEOSGeom_createEmptyPolygon_r(handle: GEOSContextHandle_t) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGeom_createPolygon"]
    pub fn GEOSGeom_createPolygon_r(
        handle: GEOSContextHandle_t,
        shell: *mut GEOSGeometry,
        holes: *mut *mut GEOSGeometry,
        nholes: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGeom_createCollection"]
    pub fn GEOSGeom_createCollection_r(
        handle: GEOSContextHandle_t,
        type_: libc::c_int,
        geoms: *mut *mut GEOSGeometry,
        ngeoms: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
